# healthcarePlanning

./: .gitignore  Dockerfile  README.md
healthcare/problem1/: README.md  problem.pddl  sas_plan
healthcare/problem2/: README.md  actions  domain.pddl  problem.pddl  problem.pddl.plan
healthcare/problem3/: README.md  domain.hddl  domain_rec.hddl  domain_simple.hddl  plan.plan  plan_multiple.plan  plan_rec.plan  plan_simple.plan  problem.hddl  problem_multiple.hddl  problem_rec.hddl  problem_simple.hddl
healthcare/problem4/: README.md  actions  actions_optic  actions_tfd  domain.pddl  problem.pddl
healthcare/problem5/: CMakeLists.txt  Dockerfile.ROS  README.md  package.xml
healthcare/problem5/launch/: commands  plansys2_healthcare_launcher.py
healthcare/problem5/pddl/: domain.pddl
healthcare/problem5/src/: deliver_item_action_node.cpp  deploy_box_action_node.cpp  deploy_container_action_node.cpp  drop_off_patient_action_node.cpp  get_patient_action_node.cpp  insert_box_action_node.cpp  insert_item_action_node.cpp  move_busy_carrier_action_node.cpp  move_escorting_accompanier_action_node.cpp  move_free_accompanier_action_node.cpp  pickup_container_action_node.cpp
